--- a/public/css/index.css
+++ b/public/css/index.css
@@ -6,6 +6,9 @@
 body {
     width: 1519px;
 }
+ul {
+    list-style: none;
+}
 /* 学历篇 */
 .Education {
    width: 100%;
@@ -24,10 +27,49 @@ body {
     left: 0;
     width: 500px;
     height: 500px;
-    /* background-color: #55f;
-    background: url(); */
+    /* overflow: hidden; */
 }
-
+.action::after {
+    content:'';
+    position: absolute;
+    left:0;
+    top: 50%;
+    transform: translateY(-25px);
+    width: 30px;
+    height: 50px;
+    background: rgba(0,0,0,.5);
+}
+.action::before {
+    content:'';
+    position: absolute;
+    right:0;
+    top: 50%;
+    transform: translateY(-25px);
+    width: 30px;
+    height: 50px;
+    background: rgba(0,0,0,.5);
+}
+.slideshow {
+    width: 2000px;
+    height: 100%;
+    background-color: #55f;
+}
+.slideshow li {
+    float: left;
+    width: 500px;
+    height: 500px;
+}
+.slideshow li a {
+    display:block;
+    width: 100%;
+    height: 100%;
+}
+.slideshow li:nth-child(1) {
+    background: url(../images/shanggan.jpg) no-repeat 0 75px;
+}
+.slideshow li:nth-child(2) {
+    background: url(../images/xiaoxue.jpg) no-repeat 0 65px;
+}
 
 /* 间隔 */
 .joinus {
